# timelock-project

./: LICENCE  README.md  pyproject.toml
src/timelock/: main.py
src/timelock/signals/: signals.py
src/timelock/ui/: constants.py  main_window.py
src/timelock/utils/: load.py
